solc_ossfuzz_seed_corpus/test_sol/test_fba42add26240c84967440f0c648f16ec6e79e2126daddee462ed37033e111a6_1d10cf0280d7d0e727c96f88f189de1dfb68cd9c_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(address i0,bool i1,address i2)  returns(bool o0)
{
  i1 = !(((-135059114449743378286373797 / (103535708894320768477366088 / -15554203407386833292621947)) != (20279675151792887369467933 * 75664773915013093791768874)));
  {


  }

  {



{


}
  }




}
function f1(int112 i0,address i1,bool i2)  returns(address o0,address o1)
{ }
// ----
// TypeError 2271: (su0.sol:73-226): Operator != not compatible with types rational_const 2100...(44 digits omitted)...2759 / 103535708894320768477366088 and int_const 1534...(44 digits omitted)...7442
